--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,16 @@
 <body>
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
 <hr>
+<form method="post" action="users">
+    <select name="user">
+        <option value="1">Admin</option>
+        <option value="2">User</option>
+    </select>
+    <p>
+        <input type="submit" value="Submit">
+    </p>
+</form>
+<hr>
 <ul>
     <li><a href="users">Users</a></li>
     <li><a href="meals">Meals</a></li>
